--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="" alt="Логотип города Седона" >
+          <img class="page-header-logo" src="" alt="Логотип города Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -77,9 +77,7 @@
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
-      </section>
 
-      <section class="recommendations">
         <ul class="reccomendations-list">
           <li class="reccomendations-item">
             <img class="logo-housing" src="" alt="Иконка жилья">
@@ -106,6 +104,7 @@
       </section>
     </main>
 
+    <footer class="page-footer">
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -118,31 +117,32 @@
         </form>
       </section>
 
-      <footer class="page-footer">
-        <div class="footer-social">
-          <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy ">
-                <span class="visually-hidden">Телеграм</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
-            <img class="htmlacademy-logo" src="" alt="Лого HTML Academy">
+      <section class="footer-social">
+        <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy ">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+        <a class="footer-phone" href="tel:+78128121212">
+          +7 (812) 812-12-12
         </a>
-      </footer>
+        <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
+          <img class="htmlacademy-logo" src="" alt="Лого HTML Academy">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
