--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,10 @@
 
   <body>
     <header class="page-header">
+      <a class="navigation-logo" href="index.html">
+        <img class="page-header-logo" src="" alt="Логотип города Седона">
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="" alt="Логотип города Седона">
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
@@ -116,7 +116,9 @@
           <button class="button" type="submit">Применить</button>
           <button class="button" type="reset">Сбросить</button>
         </form>
-        <h2 class="hotels-count">Найдено гостиниц: 38</h2>
+        <p class="hotels-count">Найдено гостиниц:
+          <span class="hotels-count-number">38</span>
+        </p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -127,7 +129,7 @@
           <span class="visually-hidden">Показать карточки</span>
         </a>
         <a class="button" href="#">
-          <span class="visually-hidden">Показать крупные карточки</span>
+          <span class="visually-hidden">Показать слайды</span>
         </a>
         <a class="button" href="#">
           <span class="visually-hidden">Показать список</span>
@@ -136,51 +138,72 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <p class="hotel-card-type">Гостиница</p>
             <b class="hotel-card-price">От 4000 ₽</b>
             <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-card-button button favorite" href="#">в избранное</a>
+            <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">4 звезды</span>
             <a class="hotel-card-button button rating">Рейтинг: 8,5</a>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <p class="hotel-card-type">Гостиница</p>
             <b class="hotel-card-price">От 5000 ₽</b>
             <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-card-button button favorite" href="#">в избранном</a>
+            <button class="hotel-card-button favorite-added" type="button">в избранном</button>
             <span class="hotel-card-stars visually-hidden">4 звезды</span>
             <a class="hotel-card-button button rating">Рейтинг: 9,2</a>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <p class="hotel-card-type">Гостиница</p>
             <b class="hotel-card-price">От 2500 ₽</b>
             <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-card-button button favorite" href="#">в избранное</a>
+            <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">3 звезды</span>
             <a class="hotel-card-button button rating">Рейтинг: 6,9</a>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <p class="hotel-card-type">Гостиница</p>
             <b class="hotel-card-price">От 1500 ₽</b>
             <a class="hotel-card-button button" href="#">подробнее</a>
-            <a class="hotel-card-button button favorite" href="#">в избранное</a>
+            <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">2 звезды</span>
             <a class="hotel-card-button button rating">Рейтинг: 5,0</a>
+          </li>
+        </ul>
+
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-all">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
           </li>
         </ul>
       </section>
