--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <!--хедер сайта с навигацией-->
     <header class="page-header">
       <a class="navigation-logo" href="index.html">
         <img class="page-header-logo" src="" alt="Логотип города Седона">
@@ -46,6 +47,7 @@
     </header>
 
     <main class="main-inner">
+      <!--блок внутреннего хедера-->
       <header class="header-inner">
         <h1 class="header-inner-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -63,6 +65,7 @@
         </ul>
       </header>
 
+      <!--блок фильтров поиска-->
       <section class="catalog-hotels">
         <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
@@ -116,6 +119,8 @@
           <button class="button" type="submit">Применить</button>
           <button class="button" type="reset">Сбросить</button>
         </form>
+
+        <!--блок найденных гостинниц с сортировкой и пагинацией-->
         <p class="hotels-count">Найдено гостиниц:
           <span class="hotels-count-number">38</span>
         </p>
@@ -209,6 +214,7 @@
       </section>
     </main>
 
+    <!--футер сайта с подпиской и соцсетями-->
     <footer class="page-footer">
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
