--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <!--хедер сайта с навигацией-->
     <header class="page-header">
       <a class="navigation-logo" href="index.html">
         <img class="page-header-logo" src="" alt="Логотип города Седона">
@@ -45,6 +46,7 @@
       </nav>
     </header>
 
+    <!--блок hero главной страницы-->
     <main class="main-index">
       <h1 class="visually-hidden">Город Седона</h1>
       <img class="logo" src="" alt="Логотип города Седона">
@@ -99,6 +101,7 @@
         </ul>
       </section>
 
+      <!--поисковый блок-->
       <section class="hotel-search">
         <h2 class="hotel-search-title">Заинтересовались?</h2>
         <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
@@ -106,6 +109,7 @@
       </section>
     </main>
 
+    <!--футер сайта с подпиской и соцсетями-->
     <footer class="page-footer">
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
