--- a/catalog.html
+++ b/catalog.html
@@ -20,23 +20,19 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="catalog.html">Гостинницы</a>
+            <a class="navigation-link navigation-link-current" href="#">Гостинницы</a>
           </li>
         </ul>
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
+              <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -52,8 +48,7 @@
         <h1 class="header-inner-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">
-              <img class="breadcrumbs-home" src="" alt="Иконка главной страницы">
+            <a class="breadcrumbs-link breadcrumbs-icon-home" href="index.html">
               <span class="visually-hidden">Главная</span>
             </a>
           </li>
@@ -116,8 +111,10 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit">Применить</button>
-          <button class="button" type="reset">Сбросить</button>
+          <div class="catalog-filter-button">
+            <button class="button" type="submit">Применить</button>
+            <button class="button" type="reset">Сбросить</button>
+          </div>
         </form>
 
         <!--блок найденных гостинниц с сортировкой и пагинацией-->
@@ -146,48 +143,48 @@
               <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <p class="hotel-card-type">Гостиница</p>
-            <b class="hotel-card-price">От 4000 ₽</b>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 4000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">4 звезды</span>
-            <a class="hotel-card-button button rating">Рейтинг: 8,5</a>
+            <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <p class="hotel-card-type">Гостиница</p>
-            <b class="hotel-card-price">От 5000 ₽</b>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 5000 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <button class="hotel-card-button favorite-added" type="button">в избранном</button>
             <span class="hotel-card-stars visually-hidden">4 звезды</span>
-            <a class="hotel-card-button button rating">Рейтинг: 9,2</a>
+            <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <p class="hotel-card-type">Гостиница</p>
-            <b class="hotel-card-price">От 2500 ₽</b>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 2500 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">3 звезды</span>
-            <a class="hotel-card-button button rating">Рейтинг: 6,9</a>
+            <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <p class="hotel-card-type">Гостиница</p>
-            <b class="hotel-card-price">От 1500 ₽</b>
+            <span class="hotel-card-type">Гостиница</span>
+            <span class="hotel-card-price">От 1500 ₽</span>
             <a class="hotel-card-button button" href="#">подробнее</a>
             <button class="hotel-card-button favorite" type="button">в избранное</button>
             <span class="hotel-card-stars visually-hidden">2 звезды</span>
-            <a class="hotel-card-button button rating">Рейтинг: 5,0</a>
+            <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
           </li>
         </ul>
 
@@ -222,9 +219,7 @@
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email">Email</label>
           <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">
-            Подписаться
-          </button>
+          <button class="button newsletter-button" type="submit">Подписаться</button>
         </form>
       </section>
 
