Исправляет сетки крупных блоков главной

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <!--хедер сайта с навигацией-->
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
-            alt="Логотип города Седона">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостинницы</a>
-          </li>
-        </ul>
+          <a class="navigation-logo" href="#">
+            <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
+              alt="Логотип города Седона">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостинницы</a>
+            </li>
+          </ul>
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
@@ -46,7 +46,7 @@
     </header>
 
     <!--блок hero главной страницы-->
-    <main class="main-container  main-index">
+    <main class="main-container main-index">
       <div class="page-container">
         <h1 class="visually-hidden" hidden>Город Седона</h1>
         <div class="main-hero">
@@ -65,8 +65,7 @@
               <div class="features-wrapper">
                 <h3 class="features-title features-title-white">Настоящий городок</h3>
                 <p class="features-description features-description-white">Седона — не аттракцион для туристов, там
-                  течёт
-                  своя жизнь</p>
+                  течёт своя жизнь</p>
               </div>
             </li>
             <li class="features-item-image">
@@ -175,5 +174,4 @@
       </div>
     </footer>
   </body>
-
 </html>
