Добавляет крупные сетки каталога

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
             </li>
             <li class="features-item-image">
-              <img class="features-img" src="images/photo-devils-bridge.jpg" width="800" height="384"
+              <img class="features-image" src="images/photo-devils-bridge.jpg" width="800" height="384"
                 alt="Фотография моста дьявола">
             </li>
             <li class="features-item features-item-blue">
