Исправляет известные ошибки

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <!--хедер сайта с навигацией-->
     <header class="page-header">
       <nav class="navigation">
-          <a class="navigation-logo" href="#">
-            <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
-              alt="Логотип города Седона">
-          </a>
-          <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостинницы</a>
-            </li>
-          </ul>
+        <a class="navigation-logo" href="#">
+          <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
+            alt="Логотип города Седона">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостинницы</a>
+          </li>
+        </ul>
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
@@ -67,8 +67,6 @@
                 <p class="features-description features-description-white">Седона — не аттракцион для туристов, там
                   течёт своя жизнь</p>
               </div>
-            </li>
-            <li class="features-item-image">
               <img class="features-image" src="images/photo-sedona-city.jpg" width="800" height="384"
                 alt="Фотография города Седона">
             </li>
@@ -90,11 +88,9 @@
                 <p class="features-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
-            <li class="features-item-image">
+            <li class="features-item features-item-blue">
               <img class="features-image" src="images/photo-devils-bridge.jpg" width="800" height="384"
                 alt="Фотография моста дьявола">
-            </li>
-            <li class="features-item features-item-blue">
               <div class="features-wrapper">
                 <h3 class="features-title features-title-white">Там есть мост дьявола</h3>
                 <p class="features-description features-description-white">Да, по нему можно пройти! Если вы осмелитесь,
@@ -165,7 +161,9 @@
               </a>
             </li>
           </ul>
-          <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <div class="footer-phone-wrapper">
+            <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </div>
           <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
             <img class="htmlacademy-logo" src="images/logo-htmlacademy-footer.svg" width="115" height="33"
               alt="Лого HTML Academy">
@@ -174,4 +172,5 @@
       </div>
     </footer>
   </body>
+
 </html>
