--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
           </header>
 
           <!--блок фильтров поиска-->
-          <section class="catalog-hotels">
+          <section class="catalog-hotel">
             <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
@@ -125,102 +125,111 @@
         </div>
 
         <!--блок найденных гостинниц с сортировкой и пагинацией-->
-        <section class="catalog-hotels">
-          <p class="hotels-count">Найдено гостиниц:
-            <span class="hotels-count-number">38</span>
-          </p>
-          <select class="select-control" aria-label="Сортировка">
-            <option value="cheap">Сначала дешевые</option>
-            <option value="expensive">Сначала дорогие</option>
-            <option value="popular">Сначала популярные</option>
-          </select>
-      </div>
-      <a class="button button-selected" href="#">
-        <span class="visually-hidden">Показать карточки</span>
-      </a>
-      <a class="button" href="#">
-        <span class="visually-hidden">Показать слайды</span>
-      </a>
-      <a class="button" href="#">
-        <span class="visually-hidden">Показать список</span>
-      </a>
+        <section class="catalog-hotel-bottom">
+          <div class="hotel-display">
+            <p class="hotel-count">Найдено гостиниц:
+              <span class="hotel-count-number">38</span>
+            </p>
+            <select class="select-control" aria-label="Сортировка">
+              <option value="cheap">Сначала дешевые</option>
+              <option value="expensive">Сначала дорогие</option>
+              <option value="popular">Сначала популярные</option>
+            </select>
+            <ul class="hotel-card-display">
+              <li class="hotel-card-display-item">
+                <a class="button button-selected" href="#">
+                  <span class="visually-hidden">Показать карточки</span>
+                </a>
+              </li>
+              <li class="hotel-card-display-item">
+                <a class="button" href="#">
+                  <span class="visually-hidden">Показать слайды</span>
+                </a>
+              </li>
+              <li class="hotel-card-display-item">
+                <a class="button" href="#">
+                  <span class="visually-hidden">Показать список</span>
+                </a>
+              </li>
+            </ul>
+          </div>
 
-      <ul class="hotel-list">
-        <li class="hotel-card">
-          <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="images/catalog/hotel_amara.jpg" width="300" height="212"
-              alt="Фотография вида из гостиницы Amara Resort & Spa">
-            <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-          </a>
-          <span class="hotel-card-type">Гостиница</span>
-          <span class="hotel-card-price">От 4000 ₽</span>
-          <a class="hotel-card-button button" href="#">подробнее</a>
-          <button class="hotel-card-button button favorite" type="button">в избранное</button>
-          <span class="hotel-card-stars visually-hidden">4 звезды</span>
-          <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
-        </li>
-        <li class="hotel-card">
-          <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="images/catalog/hotel_villas.jpg" width="300" height="212"
-              alt="Фотография вида из гостиницы Villas at Poco Diablo">
-            <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-          </a>
-          <span class="hotel-card-type">Гостиница</span>
-          <span class="hotel-card-price">От 5000 ₽</span>
-          <a class="hotel-card-button button" href="#">подробнее</a>
-          <button class="hotel-card-button button favorite-added" type="button">в избранном</button>
-          <span class="hotel-card-stars visually-hidden">4 звезды</span>
-          <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
-        </li>
-        <li class="hotel-card">
-          <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="images/catalog/hotel_desert_quail.jpg" width="300" height="212"
-              alt="Фотография вида из гостиницы Desert Quail Inn">
-            <h3 class="hotel-card-title">Desert Quail Inn</h3>
-          </a>
-          <span class="hotel-card-type">Гостиница</span>
-          <span class="hotel-card-price">От 2500 ₽</span>
-          <a class="hotel-card-button button" href="#">подробнее</a>
-          <button class="hotel-card-button button favorite" type="button">в избранное</button>
-          <span class="hotel-card-stars visually-hidden">3 звезды</span>
-          <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
-        </li>
-        <li class="hotel-card">
-          <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="images/catalog/hotel_green_tree.jpg" width="300" height="212"
-              alt="Фотография вида из гостиницы GreenTree Inn">
-            <h3 class="hotel-card-title">GreenTree Inn</h3>
-          </a>
-          <span class="hotel-card-type">Гостиница</span>
-          <span class="hotel-card-price">От 1500 ₽</span>
-          <a class="hotel-card-button button" href="#">подробнее</a>
-          <button class="hotel-card-button button favorite" type="button">в избранное</button>
-          <span class="hotel-card-stars visually-hidden">2 звезды</span>
-          <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
-        </li>
-      </ul>
+          <ul class="hotel-list">
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/catalog/hotel_amara.jpg" width="300" height="212"
+                  alt="Фотография вида из гостиницы Amara Resort & Spa">
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 4000 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-button button favorite" type="button">в избранное</button>
+              <span class="hotel-card-stars visually-hidden">4 звезды</span>
+              <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/catalog/hotel_villas.jpg" width="300" height="212"
+                  alt="Фотография вида из гостиницы Villas at Poco Diablo">
+                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 5000 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-button button favorite-added" type="button">в избранном</button>
+              <span class="hotel-card-stars visually-hidden">4 звезды</span>
+              <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/catalog/hotel_desert_quail.jpg" width="300" height="212"
+                  alt="Фотография вида из гостиницы Desert Quail Inn">
+                <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 2500 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-button button favorite" type="button">в избранное</button>
+              <span class="hotel-card-stars visually-hidden">3 звезды</span>
+              <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/catalog/hotel_green_tree.jpg" width="300" height="212"
+                  alt="Фотография вида из гостиницы GreenTree Inn">
+                <h3 class="hotel-card-title">GreenTree Inn</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 1500 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-button button favorite" type="button">в избранное</button>
+              <span class="hotel-card-stars visually-hidden">2 звезды</span>
+              <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
+            </li>
+          </ul>
 
-      <ul class="pagination">
-        <li class="pagination-item">
-          <a class="pagination-link pagination-current" href="#">1</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">2</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">3</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">4</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-all">...</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">10</a>
-        </li>
-      </ul>
-      </section>
+          <ul class="pagination">
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current" href="#">1</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">4</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link pagination-all">...</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </ul>
+        </section>
       </div>
     </main>
 
@@ -269,4 +278,5 @@
       </div>
     </footer>
   </body>
+
 </html>
