--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
 
           <!--блок фильтров поиска-->
           <section class="catalog-hotel">
-            <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
+            <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -249,7 +249,7 @@
         </section>
 
         <section class="footer-social">
-          <h2 class="page-footer-social visually-hidden" hidden>Список соцсетей</h2>
+          <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
@@ -267,9 +267,9 @@
               </a>
             </li>
           </ul>
-          <a class="footer-phone" href="tel:+78128121212">
-            +7 (812) 812-12-12
-          </a>
+          <div class="footer-phone-wrapper">
+            <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </div>
           <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
             <img class="htmlacademy-logo" src="images/logo-htmlacademy-footer.svg" width="115" height="33"
               alt="Лого HTML Academy">
@@ -278,4 +278,5 @@
       </div>
     </footer>
   </body>
+
 </html>
