--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
   <body>
     <!--хедер сайта с навигацией-->
     <header class="page-header">
-        <nav class="navigation">
-          <a class="navigation-logo" href="#">
-            <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
-              alt="Логотип города Седона">
-          </a>
-          <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостинницы</a>
-            </li>
-          </ul>
+      <nav class="navigation">
+        <a class="navigation-logo" href="#">
+          <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
+            alt="Логотип города Седона">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостинницы</a>
+          </li>
+        </ul>
 
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">Поиск</span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">Избранное</span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="button navigation-link navigation-link-white" href="#">Хочу сюда!</a>
-            </li>
-          </ul>
-        </nav>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="button navigation-link navigation-link-white" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <!--блок hero главной страницы-->
     <main class="main-container main-index">
       <div class="page-container">
-        <h1 class="visually-hidden" hidden>Город Седона</h1>
+        <h1 class="visually-hidden">Город Седона</h1>
         <div class="main-hero">
           <img class="logo" src="images/logo-hero.svg" width="458" height="352"
             alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
@@ -143,7 +143,7 @@
         </section>
 
         <section class="footer-social">
-          <h2 class="page-footer-social visually-hidden" hidden>Список соцсетей</h2>
+          <h2 class="page-footer-social visually-hidden">Список соцсетей</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
@@ -172,5 +172,4 @@
       </div>
     </footer>
   </body>
-
 </html>
