Добавляет гриды страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,7 @@
               </a>
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 4000 ₽</span>
-              <a class="hotel-card-button button" href="#">подробнее</a>
+              <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars visually-hidden">4 звезды</span>
               <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
@@ -176,8 +176,8 @@
               </a>
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 5000 ₽</span>
-              <a class="hotel-card-button button" href="#">подробнее</a>
-              <button class="hotel-card-button button favorite-added" type="button">в избранном</button>
+              <a class="hotel-card-button button button-about" href="#">подробнее</a>
+              <button class="hotel-card-button button favorite favorite-added" type="button">в избранном</button>
               <span class="hotel-card-stars visually-hidden">4 звезды</span>
               <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
             </li>
@@ -189,7 +189,7 @@
               </a>
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 2500 ₽</span>
-              <a class="hotel-card-button button" href="#">подробнее</a>
+              <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars visually-hidden">3 звезды</span>
               <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
@@ -202,11 +202,12 @@
               </a>
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 1500 ₽</span>
-              <a class="hotel-card-button button" href="#">подробнее</a>
+              <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars visually-hidden">2 звезды</span>
               <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
             </li>
+
           </ul>
 
           <ul class="pagination">
