--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
             alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         </div>
 
-        <section class="description">
-          <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <p class="description-features">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        </section>
+
 
         <section class="features">
+
+          <div class="description">
+            <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+            <p class="description-features">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
+
           <ul class="features-list">
             <li class="features-item features-item-blue">
               <div class="features-wrapper">
