Исправляет ошибки, добавляет состояния

--- a/catalog.html
+++ b/catalog.html
@@ -29,15 +29,15 @@
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link navigation-search" href="#">
+            <a class="navigation-link navigation-link-scale navigation-search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-favorite" href="#">
-              <div class="navigation-favorite-circle">
+            <a class="navigation-link navigation-link-scale navigation-favorite" href="#">
+              <span class="navigation-favorite-circle">
                 <span class="navigation-favorite-count">12</span>
-              </div>
+              </span>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -61,9 +61,7 @@
                 </a>
               </li>
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link" href="#">
-                  <span class="breadcrumbs-hotel">Гостиницы</span>
-                </a>
+                <a class="breadcrumbs-link" href="#">Гостиницы</a>
               </li>
             </ul>
           </header>
@@ -171,7 +169,7 @@
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars hotel-card-stars-4"></span>
-              <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
+              <span class="hotel-card-button rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
@@ -184,7 +182,7 @@
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite favorite-added" type="button">в избранном</button>
               <span class="hotel-card-stars hotel-card-stars-4"></span>
-              <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
+              <span class="hotel-card-button rating">Рейтинг: 9,2</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
@@ -197,7 +195,7 @@
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars hotel-card-stars-3"></span>
-              <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
+              <span class="hotel-card-button rating">Рейтинг: 6,9</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
@@ -210,7 +208,7 @@
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
               <span class="hotel-card-stars hotel-card-stars-2"></span>
-              <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
+              <span class="hotel-card-button rating">Рейтинг: 5,0</span>
             </li>
 
           </ul>
