--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
         <ul class="navigation-list navigation-menu">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link navigation-link-current" href="#">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -29,15 +29,15 @@
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link navigation-search" href="#">
+            <a class="navigation-link navigation-link-scale navigation-search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-favorite" href="#">
-              <div class="navigation-favorite-circle">
+            <a class="navigation-link navigation-link-scale navigation-favorite" href="#">
+              <span class="navigation-favorite-circle">
                 <span class="navigation-favorite-count">12</span>
-              </div>
+              </span>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
