Завершает вёрстку оставшихся компонентов

--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
           <div class="newsletter-wrapper">
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="newsletter-email">Email</label>
-              <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
+              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
                 id="newsletter-email" required>
               <button class="button newsletter-button" type="submit">Подписаться</button>
+            </form>
           </div>
-          </form>
+
         </section>
 
         <section class="footer-social">
@@ -198,7 +199,7 @@
 
     <!-- модальное окно -->
 
-    <!-- <div class="modal-container">
+    <div class="modal-container">
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
@@ -207,14 +208,14 @@
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
-              <label class="modal-form arrival-form" for="modal-arrival">Дата заезда:</label>
-              <input class="modal-field arrival-form-field " type="text" id="modal-arrival" name="modal-arrival"
+              <label class="modal-form" for="modal-arrival">Дата заезда:</label>
+              <input class="field" type="text" id="modal-arrival" name="modal-arrival"
                 placeholder="Укажите дату" value="27 апреля 2020">
             </p>
             <span class="modal-text modal-text-error">Мы не можем отправить вас в прошлое.</span>
             <p class="field-group">
-              <label class="modal-form departure-form" for="modal-departure">Дата выезда:</label>
-              <input class="modal-field departure-form-field" type="text" id="modal-departure" name="modal-departure"
+              <label class="modal-form" for="modal-departure">Дата выезда:</label>
+              <input class="field" type="text" id="modal-departure" name="modal-departure"
                 placeholder="Укажите дату" value="1 сентября 2021">
             </p>
             <span class="modal-text">На эти даты есть свободные номера. Пока есть.</span>
@@ -271,7 +272,7 @@
           </form>
         </section>
       </div>
-    </div> -->
+    </div>
 
   </body>
 
