Добавляет disabled состояние радиокнопок

--- a/catalog.html
+++ b/catalog.html
@@ -101,7 +101,7 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="visually-hidden control-input" type="radio" name="product-group" value="hotel">
+                      <input class="visually-hidden control-input" type="radio" name="product-group" value="hotel" checked>
                       <span class="control-mark"></span>
                       <span class="control-label">Гостиница</span>
                     </label>
